# MailganerTestTask

./: README.md  pyproject.toml
emailsender/emailing/: apps.py
emailsender/emailsender/: settings.py  urls.py  wsgi.py
