[tool.poetry]
name = "mailganertesttask"
version = "0.1.0"
description = ""
authors = ["Evgeny <ytrokinterteiment@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
Django = "1.11"
python-dotenv = "0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
